<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/menu_favorite" />
    <item
        android:id="@+id/menu_watch_later"
        android:icon="@drawable/ic_baseline_access_time_filled_24"
        android:title="@string/menu_watch_later" />
</menu>