<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorites.FavoriteFilmsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rounded_top"
        android:elevation="@dimen/element_box_elevation"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_favorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_borders_margin"
            android:layout_marginTop="@dimen/layout_borders_margin"
            android:layout_marginEnd="@dimen/layout_borders_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />
    </LinearLayout>

</FrameLayout>