...
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardView_1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/filmelement_size_height"
    android:layout_gravity="start|top"
    android:layout_margin="@dimen/film_spacing"
    app:cardCornerRadius="30dp"
    app:cardElevation="@dimen/element_elevation"
...
